--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-% Created 2025-04-02 Ср 20:17
+% Created 2025-04-05 Сб 01:12
 % Intended LaTeX compiler: pdflatex
 \documentclass[14pt,a4paper,oneside,openany]{book}
 \usepackage[T2A]{fontenc}
@@ -33,17 +33,91 @@
 
 \MyTOC
 
+\chapter*{ТЕРМИНЫ И ОПРЕДЕЛЕНИЯ}
+\label{sec:orge3707f8}
+\textbf{AutoML} -- автоматическое машинное обучение.
+
+\textbf{NLP} -- обработка естественного языка.
+
+\textbf{NLU} -- понимание естественного языка.
 \chapter*{Введение}
-\label{sec:orgb19e4e3}
+\label{sec:org52c6dc1}
 \addcontentsline{toc}{chapter}{Введение}
-\chapter{Глава 1}
-\label{sec:org51fa31c}
-\autocite{vaswani_attention_2017}
-\section{test 2}
-\label{sec:orgab3f6ea}
-\subsection{test 3}
-\label{sec:org9c66282}
+В последние годы наблюдается бурный рост интереса к диалоговым системам на основе искусственного интеллекта (чат-ботам, голосовым помощникам и пр.). Так, по данным трендов, интерес к голосовым технологиям AI вырос почти втрое за пять лет\footnote{\url{https://www.verloop.io/blog/100-best-chatbot-statistics}}. Диалоговые системы внедряются в бизнес-процессы и повседневную жизнь, однако создание их интеллектуальной части – модели определения намерения пользователя (intent classification) – остается сложной задачей. Такой модуль является ключевым компонентом системы, позволяя автоматически выявлять цель запроса пользователя, но учет специфики различных доменов серьезно затрудняет разработку универсальной модели. Проектирование и тонкая настройка модели интентов требуют значительных экспертных усилий в области NLP и ML. Поэтому актуальной представляется автоматизация данного процесса – создание универсальных решений, способных уменьшить долю ручной работы и упростить разработку моделей классификации интентов. Автоматизированные подходы к машинному обучению (AutoML) обещают значительно сократить объем ручного труда за счет автоматического подбора оптимальных моделей и параметров, что особенно важно для быстро растущей области диалоговых систем.
+
+На сегодняшний день для задачи классификации интентов накоплен внушительный арсенал методов. Традиционно применяются алгоритмы классического машинного обучения, такие как наивный tf-idf\autocite{joneskarensparck_statistical_1972}, а также подходы на основе k-ближайших соседей и ансамблевые методы (например, градиентный бустинг). С развитием глубокого обучения все более широко используются нейросетевые модели, таких как BERT\autocite{devlin_bert_2019}, которые достигают высоких показателей качества на задачах. Параллельно развиваются технологии AutoML, автоматизирующие выбор моделей и настройку гиперпараметров. Тем не менее, несмотря на прогресс отдельных компонентов, целостных универсальных AutoML-фреймворков, специально ориентированных на определение интентов пользователя, предложено немного. Существующие решения зачастую требуют участия эксперта для каждой новой предметной области, что указывает на необходимость разработать более обобщенный подход.
+
+В связи с этим актуальной является проблема отсутствия универсального, масштабируемого и эффективного AutoML-решения для классификации интентов, способного автоматически адаптироваться к разным доменам без глубокого участия человека-эксперта.
+
+\textbf{Цель исследования} заключается в разработке такого универсального AutoML-фреймворка, который способен автоматически подбирать оптимальные модели и их конфигурации для классификации интентов пользователя. Разработанное решение будет протестировано на различных корпусах данных (наборы пользовательских запросов), а его эффективность сопоставлена с результатами ручной настройки моделей, чтобы оценить выигрыш от автоматизации.
+
+Для достижения поставленной цели в работе решены следующие задачи:
+\begin{enumerate}
+\item разработка архитектуры и программной реализации AutoML-фреймворка для классификации интентов;
+\item экспериментальное испытание фреймворка на нескольких корпусах данных, относящихся к различным предметным областям;
+\item сравнение результатов, полученных с помощью AutoML-фреймворка, с качеством моделей, настроенных вручную, и анализ эффективности предлагаемого подхода.
+\end{enumerate}
+
+\textbf{Практическая значимость} работы состоит в том, что созданный AutoML-фреймворк может быть непосредственно применен при разработке реальных диалоговых систем – чат-ботов, голосовых ассистентов, систем клиентской поддержки – и других NLP-приложений. Использование такого инструмента позволит ускорить внедрение новых сервисов и снизить порог вхождения для разработчиков за счет автоматизации подбора оптимальной модели под конкретный набор интентов.
+
+\textbf{Научная новизна} исследования определяется интеграцией современных методов автоматизированного машинного обучения в единой специализированной архитектуре, ориентированной на задачу классификации интентов. В предлагаемом решении объединяются передовые подходы, включая трансформерные модели и методы обучения с малым количеством примеров, в рамках одного AutoML-фреймворка. Такое сочетание технологий нацелено на достижение высокой точности и устойчивости модели при минимальном ручном вмешательстве, что ранее не было реализовано в полной мере для задачи определения интентов пользователя.
+\chapter{ОБЗОР ПРЕДМЕТНОЙ ОБЛАСТИ}
+\label{sec:org5cd0b2a}
+\section{Определение намерений пользователя}
+\label{sec:org02b3e55}
+Классификация намерений –  это задача сопоставления высказывания пользователя с предопределенной меткой намерения (семантической категорией цели пользователя). Например, запрос “Какая погода будет завтра?” может быть классифицирован как запрос погоды. Эта способность является ключевым компонентом понимания естественного языка (NLU) в диалоговых системах, позволяя чат-ботам, виртуальным помощникам и другим агентам искусственного интеллекта понимать, чего хочет пользователь, и соответствующим образом реагировать. Классификация намерений уходит корнями в ранние разговорные диалоговые системы (например, телефонное обслуживание клиентов) и с тех пор получила повсеместное распространение в самых разных областях - от личных помощников и ботов поддержки клиентов до систем медицинских и юридических консультаций.
+
+Ранние методы были основаны на правилах, которые разрабатывались вручную, или на классическом машинном обучении с добавлением дополнительных функций. Однако с развитием области преобладать стали статистические методы, которые основываются на анализе данных. Сначала они использовали традиционные алгоритмы машинного обучения, а затем — методы глубокого обучения. Также мы наблюдаем расширение сферы применения: от простой классификации с закрытым набором параметров, когда каждый запрос должен относиться к одному из известных намерений, до более сложных сценариев. Например, к многоцелевой классификации, обнаружению намерений с открытым доменом или открытым набором параметров (когда запрос не соответствует ни одному из известных намерений), а также к распознаванию намерений с минимальным количеством попыток или вообще без них с помощью мощных генеративных моделей.
+\subsection{KNN}
+\label{sec:orgb3a1a91}
+\begin{enumerate}
+\item MLKNN
+\label{sec:orgcc851fd}
+Тут будет описание метода \autocite{zhang_mlknn_2007}
+\item DNNC
+\label{sec:org55d4e21}
+Тут будет описание метода \autocite{zhang_discriminative_2020}
+\item Hierarchical small navigable small worlds
+\label{sec:org543ff21}
+Тут будет описание метода \autocite{malkov_efficient_2018}
+\end{enumerate}
+\subsection{Классификация}
+\label{sec:org4694102}
+\begin{enumerate}
+\item Бустинг
+\label{sec:org3b7c0fa}
+Тут будет описание метода catboost \autocite{dorogush_catboost_2018,prokhorenkova_catboost_2018}
+\item Трансформеры
+\label{sec:orgdb31345}
+Тут будет описание метода \autocite{reimers_sentencebert_2019,devlin_bert_2019,vaswani_attention_2017}. Peft\autocite{han_parameterefficient_2024}, LoRa\autocite{hu_lora_2021}
+\end{enumerate}
+\section{Методы автоматического машинного обучения}
+\label{sec:org3e28c3d}
+Автоматизированное машинное обучение (AutoML) относится к автоматизации полного процесса применения методов машинного обучения для решения реальных задач. Вместо того чтобы вручную выбирать алгоритмы, настраивать гиперпараметры, разрабатывать архитектуры моделей и создавать признаки, система AutoML автоматически принимает эти решения на основе данных. Мотивация для развития AutoML вытекает из бурного роста применения машинного обучения и стремления {}<<демократизировать>>{} машинное обучение – сделать современные техники доступными даже для неспециалистов. Модели машинного обучения зачастую чувствительны к множеству параметров (тип модели, архитектура, настройки гиперпараметров, предварительная обработка признаков и так далее), и нахождение оптимальной конфигурации часто требует кропотливого перебора даже для экспертов. Эта проблема особенно заметна в глубоком обучении, где выбор правильной архитектуры сети и стратегии обучения может определять конечное качество модели. Цель AutoML – автоматизировать принятие этих решений, позволяя пользователю просто предоставить данные, а система подбирает оптимальную модель. Данный обзор литературы предоставляет академический анализ AutoML с основным упором на его применение в обработке естественного языка (NLP), а также включает как фундаментальные работы, так и последние разработки. Мы рассмотрим историческую эволюцию и мотивации AutoML, ключевые технические компоненты, ведущие фреймворки и системы, особенности применения AutoML в задачах NLP (например, классификация текстов, маркировка последовательностей, языковое моделирование), сравнительный анализ производительности и существующие бенчмарки, а также новые тенденции и направления исследований (например, интеграция с фундаментальными моделями, обучение с малым количеством примеров, объяснимость моделей). Обзор ссылается на рецензируемые публикации и академические источники.
+
+\begin{itemize}
+\item LAMA\autocite{vakhrushev_lightautoml_2022}
+\item AutoGluon\autocite{erickson_autogluontabular_2020}
+\item H2O\autocite{ledell_h2o_2020}
+\item TPOT
+\item TextBrew\autocite{desai_textbrew_2022}
+\end{itemize}
+\section{Текстовые аугментации}
+\label{sec:org4640e02}
+\begin{itemize}
+\item Intent-augmentation \autocite{hu_exploring_2024}
+\item Few-shot detection \autocite{hou_fewshot_2021}
+\item Dspy \autocite{khattab_dspy_2023}
+\end{itemize}
+\chapter{ПРОЕКТИРОВАНИЕ}
+\label{sec:org91635ce}
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.6\textwidth,height=0.5\textheight]{img/mermaid/framework_schema.png}
+\caption{\label{fig:framework_schema}Схема фреймворка}
+\end{figure}
 \chapter*{Заключение}
-\label{sec:org4afd8a4}
+\label{sec:org1459497}
 \printbibliography[title=СПИСОК\spaceИСПОЛЬЗОВАНЫХ\spaceИСТОЧНИКОВ]
 \end{document}
